--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -18,6 +18,13 @@
       [class.active]="isMenuOpen"
       (click)="toggleMenu()"
       aria-label="Toggle menu"
-    ></button>
+    >
+      <span></span>
+      <!-- Line 1 -->
+      <span></span>
+      <!-- Line 2 -->
+      <span></span>
+      <!-- Line 3 -->
+    </button>
   </div>
 </header>
