setting up the logo

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,7 +1,9 @@
 <header class="header" [class.scrolled]="isScrolled">
   <div class="inner">
     <!-- Logo -->
-    <a href="#home" class="logo" aria-label="Home"> AB </a>
+    <a href="#home" class="logo" aria-label="Home"> 
+      <img src="logo.svg" alt="Logo" />
+    </a>
 
     <!-- Navigation links -->
     <nav [class.open]="isMenuOpen">
