--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
 <app-home id="home"></app-home>
+<app-about-me id="about-me"></app-about-me>
+<app-skills id="skills"></app-skills>
