--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -4,7 +4,7 @@
   min-height: 50vh; /* half screen height */
   padding: 0;
   margin: 0;
-  margin-top: 5rem;
+  padding: 4rem 2rem;
 }
 /* Social links container */
 .social-links {
