--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,3 +2,5 @@
 <app-home id="home"></app-home>
 <app-about-me id="about-me"></app-about-me>
 <app-skills id="skills"></app-skills>
+<app-projects id="projects"></app-projects>
+<app-contact id="contact"></app-contact>
