--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,3 +4,4 @@
 <app-skills id="skills"></app-skills>
 <app-projects id="projects"></app-projects>
 <app-contact id="contact"></app-contact>
+<app-footer></app-footer>
